--- a/Use Google Places API to get nearby coffee shop coords.ipynb
+++ b/Use Google Places API to get nearby coffee shop coords.ipynb
@@ -3496,7 +3496,7 @@
     "        raise FreeTierLimitReached(\"Free tier limit reached. Stopping script to avoid charges.\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    api_key = \"AIzaSyBn7YP5ci6XKqQZOdcyL26J7yF7dVy3_hY\"\n",
+    "    api_key = \"my_secret_api_key\"\n",
     "    location = \"27.7676,-82.6403\"  # Example coordinates for St. Petersburg, FL\n",
     "    radius = 5000  # Search radius in meters\n",
     "    request_count = 0\n",
